import Foundation
import CoreGraphics

enum CanvasFormat: String, CaseIterable, Codable, Identifiable {
    case original = "Original"
    case portrait = "9:16"
    case square = "1:1"
    case landscape = "16:9"

    var id: String { rawValue }

    func size(for source: CGSize) -> CGSize {
        switch self {
...
        }
    }
}

enum MobileBackground: String, CaseIterable, Codable, Identifiable {
    case prism = "Prism"
    case lagoon = "Lagoon"
    case ember = "Ember"
    case midnight = "Midnight"
    case white = "White"
    case black = "Black"

    var id: String { rawValue }
...
